--- a/app-cliente/pubspec.yaml
+++ b/app-cliente/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   camera: ^0.10.3
   http: ^0.13.5
+  google_fonts: ^4.0.3
+  provider: ^6.0.5
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
