--- a/app-cliente/pubspec.yaml
+++ b/app-cliente/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^4.0.3
   provider: ^6.0.5
   get_it: ^7.2.0
+  extended_masked_text: ^2.3.1
 
 dev_dependencies:
   flutter_test:
