--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
     networks:
       bridge_network:
     image: python-main-image
-    entrypoint: uvicorn main:app --app-dir cluster --host 0.0.0.0 --port 9999
+    entrypoint: python3 cluster/main.py
 
 networks:
   bridge_network:
